Publishing gradle script

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.13.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +19,13 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url 'https://victorino.jfrog.io/artifactory/android-libs'
+            credentials {
+                username = "giovanna.victorino@gmail.com"
+                password = "AP9HDP9oY8A5zifa62mbwEbVLbc"
+            }
+        }
     }
 }
 
